@@ -49,6 +49,7 @@
 #include "digikam_debug.h"
 #include "coredbaccess.h"
 #include "coredb.h"
+#include "coredbbackend.h"
 #include "fieldquerybuilder.h"
 
 namespace Digikam
